Data/CSS/main.css
/* ... */
@font-face { font-family: phonk; src: url('../Fonts/Phonk.ttf'); }
@font-face { font-family: lemon; src: url('../Fonts/LemonMilk.ttf'); }
@font-face { font-family: orbitron; src: url('../Fonts/Orbitron.ttf'); }
@font-face { font-family: roboto; src: url('../Fonts/RobotoMono.ttf'); }

html {
  height: 100%;
  width: 100%;
  padding: 0;
  margin: 0;
  font-family: poppins;
  font-size: 15px;
  user-select: none;
  scroll-behavior: smooth;
  -webkit-tap-highlight-color: transparent;

  /*Colors*/
  --bg: #0A192F;
  --bgT: #0a192f9d;
  --button: #0c203d;
  --text: #f5f5f5;
  --textFilter: brightness(0) invert(1);
  --text2: #495670;
  --text2Filter: brightness(0) invert(30%) sepia(20%) saturate(656%) hue-rotate(182deg) brightness(100%) contrast(91%);
  --link: #f32853;
  --accent: #DC2249;
  --accentT: #dc224a31;
  --accentFilter: brightness(0) invert(29%) sepia(74%) saturate(2123%) hue-rotate(327deg) brightness(83%) contrast(111%);
  --shadowBig: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px;

  /*Waves*/
  --waveBot: 0;

  /*Skills*/
  --sk1: 0;
  --sk2: 0;
  --sk3: 0;
  --sk4: 0;
  --sk5: 0;
  --sk6: 0;

  /*Other*/
  --menuHeight: 180px;
  --pageW: 75vw;
  --pageGap: 20px;
  --homeW: 60%;
}

html[light] {
  --bg: #ffffff;
  --bgT: #ffffff69;
  --button: #e4e9f2;
  --text: #000000;
  --textFilter: brightness(0);
  --text2: #6f7b96;
  --text2Filter: brightness(0) invert(53%) sepia(14%) saturate(689%) hue-rotate(183deg) brightness(88%) contrast(86%);
}

html[mobile] {
  font-size: 13px;
  --menuHeight: 340px;
  --pageW: 80vw;
  --pageGap: 10px;
  --homeW: 100%;
}

body {
  min-height: 100%;
  width: 100%;
  padding: 0;
  margin: 0;

  display: flex;
  flex-direction: column;

  overflow: hidden;

  background: var(--bg);
  color: var(--text);
  fill: var(--text);
}

/* Block image grab */
img {
  -webkit-user-drag: none;
}

/* Links */
a {
  text-decoration: none;
}

a:not([class]) {
  color: var(--link);
  font-weight: bold;
}

/* Scrollbar */
::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}

::-webkit-scrollbar-thumb {
  background: var(--text2);
  border-radius: 7px;
  border: solid 2px transparent;
  background-clip: content-box;
}

/* Containers */
.hc {
  display: flex;
  flex-direction: row;
}

.vc {
  display: flex;
  flex-direction: column;
}

.cc {
  align-items: center;
  justify-content: center;
}

/* Pages */
.page {
  height: fit-content;
  min-height: 100vh; 
  width: var(--pageW); 
  margin: 0 auto; 
  padding: 70px 0;
  box-sizing: border-box;
  position: relative;
  display: flex; 
  flex-direction: column; 
}

.pageTit {
  display: flex;
  align-items: flex-end; 
  font-size: 30px; 
  font-family: phonk;
}

.pageTit span:first-of-type {
  font-size: 25px; 
  font-family: roboto; 
  color: var(--accent);
}

.pageBtn {
  min-height: 50px;
  width: fit-content;
  padding: 0 20px;

  display: flex;
  align-items: center;
  justify-content: center;

  font-family: roboto;
  font-size: .93rem;
  white-space: nowrap;
  color: var(--text);

  box-sizing: border-box;
  border: solid 2px var(--accent);
  border-radius: 10px;

  cursor: pointer;
  transition: background .2s;
}

.pageBtn:hover {
  background: var(--accentT);
}

/* Appear animation */
.appear {
  opacity: 0;
}

.appeared {
  animation: appear ease-out .6s;
}

@keyframes appear {
  from {
    transform: translateY(80px);
    opacity: 0;
  }
  to {
    transform: translateY(0);
    opacity: 1;
  }
}

/* Other */
::selection {
  background: var(--accent);
}

.shadow {
  text-shadow: 1px 1px 5px var(--bg), 1px -1px 5px var(--bg), -1px -1px 5px var(--bg), -1px 1px 5px var(--bg);
}





  /*$$$$$  /$$    /$$ /$$$$$$$$ /$$$$$$$  /$$        /$$$$$$  /$$     /$$
 /$$__  $$| $$   | $$| $$_____/| $$__  $$| $$       /$$__  $$|  $$   /$$/
| $$  \ $$| $$   | $$| $$      | $$  \ $$| $$      | $$  \ $$ \  $$ /$$/ 
| $$  | $$|  $$ / $$/| $$$$$   | $$$$$$$/| $$      | $$$$$$$$  \  $$$$/  
| $$  | $$ \  $$ $$/ | $$__/   | $$__  $$| $$      | $$__  $$   \  $$/   
| $$  | $$  \  $$$/  | $$      | $$  \ $$| $$      | $$  | $$    | $$    
|  $$$$$$/   \  $/   | $$$$$$$$| $$  | $$| $$$$$$$$| $$  | $$    | $$    
 \______/     \_/    |________/|__/  |__/|________/|__/  |__/    |_*/    

.overlay {
  height: 100%; 
  width: 100%;
}

.socials {
  position: fixed; 
  left: 40px;
  bottom: 0;
  color: var(--text2); 
  display: flex; 
  gap: 30px; 
  flex-direction: column-reverse; 
  align-items: center;
}

html[mobile] .socials {
  display: none;
}

.socialsLine {
  height: 10vh; 
  width: 1px; 
  background: var(--text2);
}

.socialsButton {
  width: 20px; 
  height: 20px; 
  cursor: pointer;
}

.socialsButton > img{
  width: 20px; 
  height: 20px; 
  filter: var(--text2Filter);
  transition: filter .4s, filter .4s, transform .2s;
}

.socialsButton:hover > img {
  filter: var(--accentFilter);
  transform: translateY(-3px);
  transition: filter .2s, -webkit-filter .2s, transform .2s;
}





 /*$   /$$  /$$$$$$  /$$    /$$ /$$$$$$$   /$$$$$$  /$$$$$$$ 
| $$$ | $$ /$$__  $$| $$   | $$| $$__  $$ /$$__  $$| $$__  $$
| $$$$| $$| $$  \ $$| $$   | $$| $$  \ $$| $$  \ $$| $$  \ $$
| $$ $$ $$| $$$$$$$$|  $$ / $$/| $$$$$$$ | $$$$$$$$| $$$$$$$/
| $$  $$$$| $$__  $$ \  $$ $$/ | $$__  $$| $$__  $$| $$__  $$
| $$\  $$$| $$  | $$  \  $$$/  | $$  \ $$| $$  | $$| $$  \ $$
| $$ \  $$| $$  | $$   \  $/   | $$$$$$$/| $$  | $$| $$  | $$
|__/  \__/|__/  |__/    \_/    |_______/ |__/  |__/|__/  |_*/

/* Navbar container */
.nav {
  width: 100%;
  height: 70px;
  padding: 0 min(5vw, 45px);

  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  justify-content: end;
  align-items: center;
  gap: 25px;

  box-sizing: border-box;
  background: var(--bgT); 
  backdrop-filter: blur(5px);

  box-shadow: 0 2px 15px var(--bg);
  
  z-index: 50;
}

html[mobile] .nav {
  background: transparent; 
  backdrop-filter: none;
  box-shadow: none;
}

/* Navbar buttons */
.navBtn {
  display: flex;
  font-family: roboto;
  font-size: .93rem;
  cursor: pointer;
}
/* ... */

